--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,18 @@
         @apply cursor-pointer
     }
 }
+
+.content-div {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 250px;
+}
+
+.content-div:hover {
+    background-image: linear-gradient(
+        to right,
+        rgba(245, 134, 7, 0.5)
+        hsla(58, 74%, 61%, 0.8)
+    );
+}
