--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 @layer base {
     body {
@@ -24,7 +24,9 @@
 .content-div:hover {
     background-image: linear-gradient(
         to right,
-        rgba(245, 134, 7, 0.5)
+        rgba(245, 134, 7, 0.8),
         hsla(58, 74%, 61%, 0.8)
-    );
+    )!important;
+    opacity:;
+    
 }
