--- a/index.css
+++ b/index.css
@@ -37,6 +37,14 @@
     )!important;
 }
 
+.background-particle {
+    background-image: linear-gradient(
+        to bottom   ,
+        rgb(82, 81, 81),
+        hsl(0, 0%, 0%)
+    )!important;
+}
+
 .background-2 {
     background-image: linear-gradient(
         to bottom,
