--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Wallpoet&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -15,11 +15,11 @@
 }
 
 @font-face {
-  font-family: 'Wallpoet';
-  src: url("https://fonts.googleapis.com/css2?family=Wallpoet&display=swap");
+  font-family: 'Major Mono Display';
+  src: url("https://fonts.googleapis.com/css2?family=Major Mono Display&display=swap");
 }
 .typed {
-    font-family: 'Wallpoet';
+    font-family: 'Major Mono Display';
 }
 
 .content-div {
